# TGTON2

./: .env.example  .gitignore  README.md  ROADMAP.md  USAGE_RU.md  alembic.ini  pyproject.toml  requirements.txt  БЫСТРЫЙ_СТАРТ.md  ИНСТРУКЦИЯ_ЗАПУСК.md
bot/: __init__.py  context.py  loader.py  logging_config.py  main.py
bot/handlers/: __init__.py
bot/handlers/core/: common.py  referral.py  wallet.py
bot/handlers/ton/: gem_hunter.py  positions.py  token_check.py  trading.py
bot/keyboards/inline/: gem.py  wallet.py
bot/keyboards/reply/: __init__.py  main_menu.py
bot/middlewares/: __init__.py  db.py  errors.py  i18n.py  throttling.py
bot/models/: __init__.py  base.py  gem_cache.py  position.py  referral.py  settings.py  user.py
bot/repositories/: __init__.py  gem_cache_repo.py  position_repo.py  user_repo.py
bot/scripts/: __init__.py  init_db.py
bot/services/core/: referral_service.py  ton_connect.py
bot/services/ton/: gem_scanner.py  gem_watch.py  price_feed.py  safety_checker.py  swap_service.py  ton_direct.py
bot/utils/: cache.py  i18n.py  plugins_loader.py  security.py
bot/web/: __init__.py  app.py  webhooks.py
config/: runtime.env  settings.py
database/: README.md  __init__.py
database/migrations/: env.py  script.py.mako
docs/: production.md  scaling.md  windows_run.md  ИНТЕГРАЦИЯ_ИНДЕКСЕР.md  РАЗВЁРТЫВАНИЕ_ПОЛНЫЙ_СТЕК.md
locales/: en.json  ru.json
plugins/: README.md  __init__.py
plugins/base/: README.md  __init__.py
plugins/solana/: README.md  __init__.py
web/: manifest.json
web/mini_app/: README.md  package.json
(+2 files in other folders)
